# scrabble

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  PROFILE-OPT-1  README.md  ai_player.cc  ai_player.cpp  ai_player.h  ai_player.hpp  board_builder.cpp  board_builder.h  board_builder.hpp  board_loc.cc  board_loc.cpp  board_loc.hpp  constraint.cc  constraint.cpp  constraint.h  constraint.hpp  game.py  gui_human_player.cpp  gui_human_player.hpp  human_player.cc  human_player.cpp  human_player.h  human_player.hpp  indv_play.cpp  indv_play.h  indv_play.hpp  main.C  main.cc  piece_source.cpp  piece_source.hpp  player.cc  player.cpp  player.h  player.hpp  pygame.py  safe_string.h  (+62 more)
dictionaries/: MEGA_WORD_LIST.txt  SIMPLE_WORD_LIST.txt  WWF.txt
machine-files/: generic_openmp.cmake
saves/: ella1  holly1
tests/: CMakeLists.txt  full_tests.cpp  scrabble_catch_main.cpp  tests_common.cpp  tests_common.hpp
tests/test-files/: test_five.gold.0  test_five.gold.1  test_five.gold.10  test_five.gold.11  test_five.gold.12  test_five.gold.13  test_five.gold.14  test_five.gold.15  test_five.gold.16  test_five.gold.17  test_five.gold.18  test_five.gold.19  test_five.gold.2  test_five.gold.3  test_five.gold.4  test_five.gold.5  test_five.gold.6  test_five.gold.7  test_five.gold.8  test_five.gold.9
